--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ osx_image: xcode7.3
 branches:  
   only:
     - master
-before_script: - chmod +x gradlew
+before_script: 
+    - chmod +x gradlew
 script:  
 - ./build.sh
