--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ osx_image: xcode7.3
 branches:  
   only:
     - master
-before_script: 
-    - chmod +x gradlew
+before_install:
+  - chmod +x gradlew
 script:  
-- ./build.sh
+  - ./build.sh
