--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,7 @@ os: Visual Studio 2015
 build_script:
   - ps: dotnet restore
   - ps: dotnet build src/ColorChange
+  - ps: dotnet run src/ColorChange
 
 test: off 
 version: "{build}"
