--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,11 @@
 language: csharp
 sudo: required
 dist: trusty
-dotnet: 1.0.0-preview2-003121
+dotnet: 1.0.1
 env:
   - DOTNETCORE=1
 mono:
   - none
-os:
-  - linux
-  - osx
-osx_image: xcode7.3
 branches:
   only:
     - master
